# ubft

./: .clang-tidy  .dory-root  .gitignore  Dockerfile  README.md  build.py  format.sh  targets.yaml  tidy.sh
conan/: Makefile  generate-makefile.py  parse-compilers.py  profile.sh
conan/compilers/: .gitignore  link.sh
conan/exports/compiler-options/: compileroptions.py  conanfile.py
conan/invoker/: build-lib-notest.sh  build-lib-test.sh  build-locally.sh  build-tidy.sh  check-changes.sh  export-only.sh  export.sh  invoker.py
conan/profiles/: clang-10-debug.profile  clang-10-minsizerel.profile  clang-10-release.profile  clang-10-relwithdebinfo.profile  clang-11-debug.profile  clang-11-minsizerel.profile  clang-11-release.profile  clang-11-relwithdebinfo.profile  clang-12-debug.profile  clang-12-minsizerel.profile  clang-12-release.profile  clang-12-relwithdebinfo.profile  clang-7-debug.profile  clang-7-minsizerel.profile  clang-7-release.profile  clang-7-relwithdebinfo.profile  clang-8-debug.profile  clang-8-minsizerel.profile  clang-8-release.profile  clang-8-relwithdebinfo.profile  clang-9-debug.profile  clang-9-minsizerel.profile  clang-9-release.profile  clang-9-relwithdebinfo.profile  gcc-10-debug.profile  gcc-10-minsizerel.profile  gcc-10-release.profile  gcc-10-relwithdebinfo.profile  gcc-11-debug.profile  gcc-11-minsizerel.profile  gcc-11-release.profile  gcc-11-relwithdebinfo.profile  gcc-8-debug.profile  gcc-8-minsizerel.profile  gcc-8-release.profile  gcc-8-relwithdebinfo.profile  gcc-9-debug.profile  gcc-9-minsizerel.profile  gcc-9-release.profile  gcc-9-relwithdebinfo.profile
conan/scripts/: dory_rm_build_dirs
conn/: README.md  conanfile.py
conn/src/: CMakeLists.txt  contexted-poller.hpp  message-identifier.hpp  rc-exchanger.hpp  rc.cpp  rc.hpp  ud-exchanger.hpp  ud.cpp  ud.hpp  wr-builder.hpp
conn/src/internal/: message-identifier-internal.hpp
conn/src/manager/: uniform-rc.hpp  uniform-ud.hpp
conn/src/mocks/: mocks.hpp
conn/src/test/: packing-test.cpp
conn/test/: CMakeLists.txt  conanfile.py  contexted-poller-test.cpp  identifier-test.cpp  packing-test.cpp
crash-consensus/: .gitignore  README.md  build_library.sh  conanfile.py
crash-consensus/mu-build/: README.md
crash-consensus/mu-build/patches/: add_constness.patch  default_cores.patch  fix_leader.patch  thread_sleep.patch
crash-consensus/mu-build/scripts/: compile.sh  prepare.sh
crypto/: .gitignore  README.md  conanfile.py
crypto/bench/: README.md
crypto/bench/simple/src/: CMakeLists.txt  impl.hpp  main.cpp
crypto/src/: CMakeLists.txt
crypto/test/: CMakeLists.txt  conanfile.py  dalek-impl.hpp  hash.cpp  impl.hpp  main.cpp  sodium-impl.hpp
ctrl/: README.md  conanfile.py
ctrl/src/: CMakeLists.txt  ae_handler.hpp  block.cpp  block.hpp  device.cpp  device.hpp
memory/: README.md  conanfile.py
memory/src/: CMakeLists.txt  locked-memory.cpp  locked-memory.hpp
memstore/: README.md  conanfile.py
memstore/src/: CMakeLists.txt  store.cpp  store.hpp
pony/: README.md  conanfile.py
rpc/: README.md  conanfile.py
rpc/src/: CMakeLists.txt  abstract-handler.hpp  basic-client.hpp  server.hpp
rpc/test/: CMakeLists.txt  conanfile.py  rpc-test.cpp
shared/: README.md  conanfile.py
shared/src/: CMakeLists.txt  assert.hpp  bench.hpp  bitmask.hpp  branching.hpp  concepts.hpp  dynamic-bitset.hpp  dynamic-config.hpp  error.hpp  hash.hpp  host.cpp  host.hpp  latency.hpp  logger.cpp  logger.hpp  match.hpp  move-indicator.hpp  optimistic-find.hpp  pinning.cpp  pinning.hpp  pointer-wrapper.hpp  types.hpp  units.hpp  unused-suppressor.hpp
shared/test/: CMakeLists.txt  conanfile.py  error-test.cpp
special/: README.md  conanfile.py
special/src/: CMakeLists.txt  heartbeat.cpp  heartbeat.hpp  init-array.cpp  init-array.hpp  proc-mem.cpp  proc-mem.hpp  proc-name.cpp  proc-name.hpp
ubft/: README.md  conanfile.py
ubft-apps/: .gitignore  binaries.sh  conanfile.py  config.sh
ubft-apps/reparent/: build.sh  reparent.c
ubft-apps/src/: CMakeLists.txt  client.cpp  kvstores.hpp  mu-server.cpp  ubft-server.cpp
ubft-apps/src/app/: app.hpp  flip.hpp  liquibook.hpp  memc.hpp  redis.hpp
ubft-apps/src/app/internal/liquibook/: common.h  server.h
ubft/src/: CMakeLists.txt  app.cpp  buffer.hpp  builder.hpp  client-test.cpp  client.hpp  crypto.hpp  helpers.hpp  latency-hooks.cpp  latency-hooks.hpp  latency.hpp  message.hpp  server-builder.hpp  server-test.cpp  server.hpp  types.hpp  unsafe-at.hpp
ubft/src/benchmarks/: p2p-send-blake.cpp
ubft/src/certifier/: certificate.hpp  certifier-builder.hpp  certifier.hpp  ping.cpp  types.hpp
ubft/src/certifier/internal/: share-message.hpp
ubft/src/consensus/: app.hpp  consensus-builder.hpp  consensus.hpp  test.cpp  types.hpp
ubft/src/consensus/internal/: broadcast-commit.hpp  cb-checkpoint.hpp  instance-state.hpp  messages.hpp  packing.hpp  replica-state.hpp  requests.hpp  serialized-state.hpp  view-change.hpp
ubft/src/replicated-swmr/: host-builder.hpp  ping.cpp  reader-builder.hpp  reader.hpp  test.cpp  writer-builder.hpp  writer.hpp
ubft/src/rpc/: client-test.cpp  client.hpp  common.hpp  kvstores.hpp  server-test.cpp  server.hpp
ubft/src/rpc/internal/: common.hpp  connection.hpp  dynamic-connections.hpp  ingress.hpp  request.hpp  response.hpp
ubft/src/swmr/: constants.hpp  header.hpp  host-builder.hpp  host.hpp  ping.cpp  reader-builder.hpp  reader.hpp  test.cpp  writer-builder.hpp  writer.hpp
ubft/src/swmr/internal/: exchanger-role.hpp
ubft/src/tail-cb/: broadcaster-builder.hpp  broadcaster.hpp  message.hpp  ping.cpp  receiver-builder.hpp  receiver.hpp  test.cpp
ubft/src/tail-cb/internal/: signature-message.hpp
ubft/src/tail-map/: tail-map.hpp  tree.hpp  vector.hpp
ubft/src/tail-p2p/: ping.cpp  receiver-builder.hpp  receiver.hpp  sender-builder.hpp  sender.hpp  test.cpp  types.hpp
ubft/src/tail-p2p/internal/: async-sender.hpp  header.hpp  lazy.hpp  sync-sender.hpp
ubft/src/tail-queue/: deque.hpp  tail-queue.hpp  vector.hpp
ubft/src/thread-pool/: lock-free.hpp  locking.hpp  tail-thread-pool.hpp  test.cpp
(+33 files in other folders)
